2024-07-19T00:33:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10000553906 # 361
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-19
* notice: last 14d: unq all: 4 10
* notice: prev accum: outdated-unq outdated-all / unq all: 342 1243 / 345 1251
* notice: next accum: outdated-unq outdated-all / unq all: 342 1243 / 346 1253
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-07-18]

2024-07-16T00:33:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9948706009 # 358
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-16
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 342 1243 / 344 1249
* notice: next accum: outdated-unq outdated-all / unq all: 342 1243 / 345 1251
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-07-15]

2024-07-14T00:37:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9923993603 # 356
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-14
* notice: last 14d: unq all: 2 6
* notice: prev accum: outdated-unq outdated-all / unq all: 342 1243 / 343 1247
* notice: next accum: outdated-unq outdated-all / unq all: 342 1243 / 344 1249
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-07-13]

2024-07-13T00:33:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9915804234 # 355