@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-07-19T00:33:10Z",
+  "timestamp" : "2024-07-20T00:32:41Z",
   "count_outdated" : 1243,
   "uniques_outdated" : 342,
-  "count" : 1253,
-  "uniques" : 346,
+  "count" : 1255,
+  "uniques" : 347,
   "views" : [
     {
       "timestamp": "2024-07-12T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2024-07-18T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-07-19T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
