@@ -1,6 +1,6 @@
 {
-  "count": 10,
-  "uniques": 4,
+  "count": 12,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2024-07-12T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2024-07-18T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-07-19T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
