@@ -1,3 +1,12 @@
+2024-07-20T00:32:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10016045962 # 362
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-20
+* notice: last 14d: unq all: 5 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 342 1243 / 346 1253
+* notice: next accum: outdated-unq outdated-all / unq all: 342 1243 / 347 1255
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-07-19]
+
 2024-07-19T00:33:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10000553906 # 361
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-19
